Create Project page started as well as ProjectController in the API

--- a/Frontend/ClientApp/src/app/login/login.component.html
+++ b/Frontend/ClientApp/src/app/login/login.component.html
@@ -20,3 +20,8 @@
   </div>
   <div *ngIf="error" class="alert alert-danger">{{error}}</div>
 </form>
+<div>
+  <p>
+    <a class="nav-link text-dark" [routerLink]='["/register"]'>Register Here</a>
+  </p>
+</div>
