--- a/Frontend/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Frontend/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,13 +18,10 @@
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/new-test-comp"]'>New Test Comp</a>
+            <a class="nav-link text-dark" [routerLink]='["/project"]'>Project</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/login"]'>Login</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/register"]'>Register</a>
           </li>
         </ul>
       </div>
