--- a/Frontend/ClientApp/src/app/project/project.component.html
+++ b/Frontend/ClientApp/src/app/project/project.component.html
@@ -1,2 +1,23 @@
-<p>project works!</p>
 <a class="nav-link text-dark" [routerLink]='["/create-project"]'>Add Project</a>
+
+<p *ngIf="!projects"><em>Loading...</em></p>
+
+<table class='table table-striped' *ngIf="projects">
+  <thead>
+    <tr>
+      <th>Project Name</th>
+      <th>Project Description</th>
+      <th>Voltooid</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let project of projects">
+      <td>{{ project.name }}</td>
+      <td>{{ project.description }}</td>
+      <td>{{ project.isCompleted }}</td>
+      <td><a href="{{ getUrl(project.id) }}">Details</a></td>
+    </tr>
+  </tbody>
+</table>
+
