Added a part of user selection in an project

--- a/Frontend/ClientApp/src/app/project-details/project-details.component.html
+++ b/Frontend/ClientApp/src/app/project-details/project-details.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="projectForm && element" name="projectForm" [formGroup]="projectForm" (ngSubmit)="onFormSubmit(projectForm.value)">
   <input type="hidden" formControlName="elementId" />
-  <textarea class="form-control" formControlName="explanation"></textarea>
+  <textarea class="form-control" rows="8" formControlName="explanation"></textarea>
   <br />
   <div class="row">
     <div class="col-sm-6">
