When a project is created, redirect to that project page

--- a/Frontend/ClientApp/src/app/create-project/create-project.component.html
+++ b/Frontend/ClientApp/src/app/create-project/create-project.component.html
@@ -1,23 +1,26 @@
 <div class="container" style="padding-top:40px;">
   <div class="row">
     <div class="col-md-6 mx-auto">
-      <div class="card mx-4">
-        <div class="card-body p-4">
+      <div class="card mx-7">
+        <div class="card-body p-7">
           <form *ngIf="projectForm" [formGroup]="projectForm" (ngSubmit)="onFormSubmit(projectForm.value)">
             <h1 style="text-align:center">Create new project</h1>
+            <hr />
+            Project name:
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Name" formControlName="Name">
             </div>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Description" formControlName="Description">
-            </div>
+            Project description:
             <div class="input-group mb-4">
-              <!--<select class="form-control">
-                      [(ngModel)]="selectedProdType"
-                      (ngModelChange)="changeSelectedType($event)">
-                <option *ngFor="let type of asvsLevels" [ngValue]="type">{{type.name}}</option>
-              </select>-->
-              <input type="number" max="3" min="1" class="form-control" placeholder="ASVSLevel" formControlName="ASVSLevel">
+              <textarea rows="4" type="text" class="form-control" placeholder="Description" formControlName="Description" ></textarea>
+            </div>
+            ASVS Level:
+            <div class="input-group mb-3">
+              <select class="form-control" formControlName="ASVSLevel" >
+                <option value="1">Opportunistic</option>
+                <option value="2">Standard</option>
+                <option value="3">Advanced</option>
+              </select>
             </div>
             <button type="submit" class="btn btn-block btn-success">Create project</button>
           </form>
