--- a/Frontend/ClientApp/src/app/project/project.component.html
+++ b/Frontend/ClientApp/src/app/project/project.component.html
@@ -1,5 +1,5 @@
-<a class="nav-link text-dark" [routerLink]='["/create-project"]'>Add Project</a>
-
+<a class="nav-link " [routerLink]='["/create-project"]'>Add Project</a>
+<hr />
 <p *ngIf="!projects"><em>Loading...</em></p>
 
 <table class='table table-striped' *ngIf="projects">
