--- a/Frontend/ClientApp/src/app/project/project.component.html
+++ b/Frontend/ClientApp/src/app/project/project.component.html
@@ -1,8 +1,8 @@
 <a class="nav-link " [routerLink]='["/create-project"]'>Add Project</a>
-<hr />
+
 <p *ngIf="!projects"><em>Loading...</em></p>
 
-<table class='table table-striped' *ngIf="projects">
+<table class='table table-active' *ngIf="projects">
   <thead>
     <tr>
       <th>Project Name</th>
@@ -11,11 +11,10 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let project of projects">
+    <tr *ngFor="let project of projects" [className]="project.isCompleted ? 'list-group-item-dark' : 'visible'" >
       <td>{{ project.name }}</td>
       <td>{{ project.description }}</td>
       <td><a [routerLink]="['/project/'+project.id]">Details</a></td>
     </tr>
   </tbody>
 </table>
-
