--- a/Frontend/ClientApp/src/app/app.component.html
+++ b/Frontend/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-  <app-nav-menu></app-nav-menu>
+  <app-nav-menu [loggedIn]="loggedIn"></app-nav-menu>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
