--- a/Frontend/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Frontend/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,7 +20,7 @@
           <li *ngIf="!loggedIn" class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/login"]'>Login</a>
           </li>
-          <li *ngIf="loggedIn" class="nav-item" [routerLinkActive]='["link-active"]'>
+          <li *ngIf="isLoggedIn()" class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" (click)="logout()" [routerLink]='["/"]'>Logout</a>
           </li>
         </ul>
