--- a/Frontend/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Frontend/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -21,6 +21,7 @@
             <a class="nav-link text-dark" [routerLink]='["/login"]'>Login</a>
           </li>
           <li *ngIf="isLoggedIn()" class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/profile"]'>Profile</a>
             <a class="nav-link text-dark" (click)="logout()" [routerLink]='["/"]'>Logout</a>
           </li>
         </ul>
